--- a/styles.css
+++ b/styles.css
@@ -453,6 +453,7 @@ body::before {
 
 .selected-section-header {
     background: rgb(237, 237, 237);
+    border-bottom: 3px solid rgb(255, 255, 255);
 }
 
 .search-header h3,
@@ -520,7 +521,7 @@ body::before {
 .items-header {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 }
 
 .items-header h3 {
@@ -544,7 +545,7 @@ body::before {
     gap: 4px;
     padding: 6px 12px;
     background: rgba(255, 255, 255, 0.826);
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgb(254, 153, 200);
     border-radius: var(--radius-lg);
     color: var(--danger-color);
     font-size: 0.75rem;
@@ -1919,9 +1920,10 @@ body::before {
 /* Canvas Button Guide */
 .canvas-button-guide {
     margin: 3px 0;
-    padding: 5px 0;
+    padding: 5px;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.6) 0%, rgba(250, 250, 250, 0.5) 100%);
-    border: 1px solid rgba(0, 0, 0, 0.246);
+    border: 1px solid rgba(0, 0, 0, 0.111);
+    box-shadow: var(--shadow-sm);
     border-radius: var(--radius-lg);
     backdrop-filter: blur(10px);
 }
